--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,31 +11,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.13'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest flake8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest flake8
 
-    - name: Run Linting
-      run: flake8 src/ tests/
+      - name: Run Linting
+        run: flake8 src/ tests/
 
-    - name: Run Tests
-      run: pytest tests/ -v --tb=short
+      - name: Run Tests
+        run: |
+          mkdir -p test-results
+          pytest tests/ --junitxml=test-results/results.xml
 
-    - name: Build Docker Image
-      run: docker build -t my-app:latest .
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: test-results/
 
-    - name: Upload Test Results
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-results
-        path: test-results/
+      - name: Build & Save Docker Image
+        run: |
+          docker build -t myapp:${{ github.sha }} .
+          mkdir -p docker-image
+          docker save myapp:${{ github.sha }} | gzip > docker-image/myapp.tar.gz
+
+      - name: Upload Docker image artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: docker-image
+          path: docker-image/myapp.tar.gz
